2014-06-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/update_manager/update_manager.online.php: set to 500mb the
	check of memory limit.

2014-06-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/license.php: fix the link to new update manager.

2014-06-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/update_manager/update_manager.offline.php,
	godmode/update_manager/update_manager.online.php,
	include/functions_update_manager.php,
	include/ajax/update_manager.ajax.php,
	include/javascript/update_manager.js: a lot of fixes into the update
	manager.

2014-06-26  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/ca.mo
	  include/languages/ca.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/nl.po
	  include/languages/nl.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/pt.po
	  include/languages/pt.mo
	  include/languages/pt_BR.po
	  include/languages/pt_BR.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/sk.po
	  include/languages/sk.mo
	  include/languages/tr.po
	  include/languages/tr.mo
	  include/languages/zh_CN.po
	  include/languages/zh_CN.mo: Updated translations.

2014-06-26  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/netflow/nf_live_view.php,
	  godmode/netflow/nf_edit.php,
	  godmode/servers/manage_recontask_form.php,
	  godmode/servers/plugin.php,
	  godmode/setup/setup_general.php: Added messages to
	warn about incompatibilities for Windows users.
